Congratulations Ted U COMMITTED!!!

--- a/test.html
+++ b/test.html
@@ -1,7 +1,16 @@
 <!doctype html>
 
 <html>
-<header>
-Hello
-</header>
+<head>
+<title>The Coolest Kid</title>
+<meta name="keywords" content="king" /> 
+</head>
+<body>
+<center><h1>Hello</h1>
+<strong>something important!</strong>
+<em>other important thing!</em></center>
+<footer>
+<center>I'm a foot</center>
+</footer>
+</body>
 </html>
